--- a/mobile/eswap/pubspec.yaml
+++ b/mobile/eswap/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   firebase_messaging: ^15.2.4
   firebase_core: ^3.12.1
   stomp_dart_client: ^2.1.3
+  flutter_swiper_view: ^1.1.8
+  chewie: ^1.11.0
+  video_player: ^2.9.5
+  cached_network_image: ^3.4.1
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
