--- a/mobile/eswap/pubspec.yaml
+++ b/mobile/eswap/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   video_player: ^2.9.5
   cached_network_image: ^3.4.1
   photo_view: ^0.15.0
+  flutter_local_notifications: ^19.1.0
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
