--- a/mobile/eswap/android/app/src/main/AndroidManifest.xml
+++ b/mobile/eswap/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,9 @@
     package="com.pblues.eswap">
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.VIBRATE" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
     <application
         android:label="Eswap"
         android:name="${applicationName}"
