--- a/mobile/eswap/pubspec.yaml
+++ b/mobile/eswap/pubspec.yaml
@@ -51,6 +51,10 @@ dependencies:
   cached_network_image: ^3.4.1
   photo_view: ^0.15.0
   flutter_local_notifications: ^19.1.0
+  photo_manager: ^3.6.4
+  image_picker: ^1.1.2
+  permission_handler: ^12.0.0+1
+  dotted_border: ^2.1.0
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
