--- a/mobile/eswap/pubspec.yaml
+++ b/mobile/eswap/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   image_picker: ^1.1.2
   permission_handler: ^12.0.0+1
   dotted_border: ^2.1.0
+  flutter_image_compress: ^2.4.0
+  path_provider: ^2.1.5
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
