--- a/mobile/eswap/pubspec.yaml
+++ b/mobile/eswap/pubspec.yaml
@@ -58,6 +58,9 @@ dependencies:
   flutter_image_compress: ^2.4.0
   path_provider: ^2.1.5
   google_maps_flutter: ^2.12.1
+  shimmer: ^3.0.0
+  url_launcher: ^6.3.1
+  qr_flutter: ^4.1.0
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
